trunk/Archive2/28/505aa41f4d2912/output
main.cpp:6:5: warning: identifier 'nullptr' is a keyword in C++11 [-Wc++0x-compat]
     std::time_t result = std::time(nullptr);
     ^
main.cpp: In function 'int main()':
main.cpp:6:36: error: 'nullptr' was not declared in this scope
     std::time_t result = std::time(nullptr);
                                    ^
